# MathC

./: CMakeLists.txt
MathC/: CMakeLists.txt  debug_helper.h  high.h  mathC.cppm  testing.cpp
MathC/calculus/: calculus.cpp  calculus.cppm  duals.cpp  duals.cppm  duals.hpp  field_funcs.hpp
MathC/func/: func.hpp  funcs.hpp  funcs_decl.h  op.hpp  op_def.h
MathC/linalg/: mat_vec_old.cppmold  math_vec.cpp  math_vec.cppm  math_vec_old.cppm  vec_utils.h  vector_cond.hpp  vector_lists.h  vectors.hpp
MathC/utils/: main_utils.hpp  type_utils.hpp
